<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/ColorWhite"
    android:weightSum="1">

    <TextView android:id="@+id/form_coordonneePostale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dp"
        android:text="@string/coordonnee"
        android:textColor="@color/ColorBlue" />

    <include layout="@layout/underline_text"/>

   <!-- <EditText android:id="@+id/form_coordonnee_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:textColorHint="@color/ColorWhitePink"
        android:hint="Code Postal" /> -->

    <EditText android:id="@+id/form_coordonnee_commune"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/ColorWhiteBlue"
        android:hint="Ville" />

    <EditText android:id="@+id/form_coordonnee_voie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/ColorWhiteBlue"
        android:hint="Adresse" />

  <!--  <EditText android:id="@+id/form_coordonnee_numero"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/ColorWhitePink"
        android:hint="Numéro" /> -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/container_coordonnee" >

    <Button android:id="@+id/bouton_coordonnee_valider"
        style="@style/button_text"
        android:text="VALIDER"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="60dp" />

    <Button android:id="@+id/bouton_coordonnee_effacer"
        style="@style/button_text"
        android:text="EFFACER" />
        </LinearLayout>


    <TextView android:id="@+id/form_coordonneeGps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dp"
        android:paddingTop="20dp"
        android:textColor="@color/ColorBlue"
        android:text="@string/gps" />

    <include layout="@layout/underline_text"/>

    <EditText android:id="@+id/form_gps_latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/ColorWhiteBlue"
        android:hint="Latitude" />

    <EditText android:id="@+id/form_gps_longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:textColorHint="@color/ColorWhiteBlue"
        android:hint="Longitude"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/container_gps" >

    <Button android:id="@+id/bouton_gps_valider"
        style="@style/button_text"
        android:text="VALIDER"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="30dp" />

    <Button android:id="@+id/bouton_gps_effacer"
        style="@style/button_text"
        android:text="EFFACER" />

        </LinearLayout>

</LinearLayout>
