<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <fr.brgm.georisques.ui.MultiDirectionSlidingDrawer
        xmlns:my="http://schemas.android.com/apk/res/fr.brgm.georisques"
        android:id="@+id/drawer"
        my:direction="topToBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        my:handle="@+id/handle"
        my:content="@+id/content">

        <include
            android:id="@id/content"
            layout="@layout/fragment_menu_gauche" />

        <ImageView
            android:id="@id/handle"
            android:layout_width="700dp"
            android:layout_height="50px"
            android:src="@drawable/sliding_drawer_handle_bottom" />

    </fr.brgm.georisques.ui.MultiDirectionSlidingDrawer>


</RelativeLayout>